--- a/questdb-unorthodox-java.html
+++ b/questdb-unorthodox-java.html
@@ -193,7 +193,8 @@ blockquote {
 <li>PostgreSQL Wire Protocol compatible</li>
 <li>High-speed ingestion: InfluxDB line protocol</li>
 </ul>
-<p><strong>GitHub:</strong> <a href="https://github.com/questdb/questdb">https://github.com/questdb/questdb</a></p>
+<p><strong>GitHub:</strong> <a href="https://github.com/questdb/questdb">https://github.com/questdb/questdb</a><br />
+<strong>Live Demo:</strong> <a href="https://demo.questdb.io">https://demo.questdb.io</a></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-paginate="true" data-background-color="#ffffff" data-color="#333333" data-theme="default" data-style="section {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -250,16 +251,16 @@ blockquote {
   gap: 1em;
 }
 ;color:#333333;background-color:#ffffff;background-image:none;" data-marpit-pagination-total="61">
-<h1 id="the-numbers-%F0%9F%92%AA">The Numbers <img class="emoji" draggable="false" alt="💪" src="https://cdn.jsdelivr.net/gh/jdecked/twemoji@16.0.1/assets/svg/1f4aa.svg" data-marp-twemoji=""/></h1>
+<h1 id="the-numbers">The Numbers</h1>
 <h2 id="what-do-we-mean-by-high-performance">What do we mean by &quot;high-performance&quot;?</h2>
 <ul>
 <li><strong>Millions</strong> of rows ingested per second</li>
 <li>Query <strong>billions</strong> of rows efficiently</li>
-<li>Near-zero GC pauses</li>
 </ul>
 <blockquote>
 <p>No magic, just hard work and clever engineering</p>
 </blockquote>
+<h2 id="demo">Demo</h2>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-paginate="true" data-background-color="#ffffff" data-color="#333333" data-theme="default" data-style="section {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
